// ============================================================================
// ER ESPECÍFICO — Base de datos `access-control-system`
// ============================================================================
// Schema gestionado por Drizzle Kit (push). Modelo en
// packages/db/src/schema/auth.ts
// ============================================================================

Project acs_db {
  database_type: 'PostgreSQL'
  Note: 'Base de datos transaccional principal. Better-Auth + dominio de usuarios.'
}

Table user as U {
  id             text       [pk, note: 'PK textual generada por Better-Auth']
  name           text       [not null]
  email          text       [not null, unique]
  email_verified boolean    [not null, default: false]
  image          text
  face_registered boolean   [not null, default: false]
  face_meta      jsonb      [default: `null`]
  created_at     timestamp  [not null, default: `now()`]
  updated_at     timestamp  [not null, default: `now()`]

  Note: '''
    Drizzle: `pgTable("user", ...)`.
    Columnas adicionadas sobre el esquema estándar de Better-Auth:
      • face_registered  (boolean)
      • face_meta        (jsonb) — { registeredAt, source, biometricResponse }
  '''
}

Table session as S {
  id          text       [pk]
  expires_at  timestamp  [not null]
  token       text       [not null, unique]
  created_at  timestamp  [not null, default: `now()`]
  updated_at  timestamp  [not null]
  ip_address  text
  user_agent  text
  user_id     text       [not null]

  indexes {
    user_id [name: 'session_userId_idx']
  }
}

Table account as A {
  id            text       [pk]
  account_id    text       [not null]
  provider_id   text       [not null]
  user_id       text       [not null]
  access_token  text
  refresh_token text
  id_token      text
  access_token_expires_at  timestamp
  refresh_token_expires_at timestamp
  scope         text
  password      text
  created_at    timestamp  [not null, default: `now()`]
  updated_at    timestamp  [not null]

  indexes {
    user_id [name: 'account_userId_idx']
  }
}

Table verification as V {
  id          text       [pk]
  identifier  text       [not null]
  value       text       [not null]
  expires_at  timestamp  [not null]
  created_at  timestamp  [not null, default: `now()`]
  updated_at  timestamp  [not null, default: `now()`]

  indexes {
    identifier [name: 'verification_identifier_idx']
  }
}

// ----------------------------------------------------------------------------
// Relaciones (todas ON DELETE CASCADE — borrar un user limpia sus rastros)
// ----------------------------------------------------------------------------

Ref: S.user_id > U.id [delete: cascade]
Ref: A.user_id > U.id [delete: cascade]
